css/middle-content.css
.header1{
  position: fixed;
  left: 341px;
  width: 36.7rem;
  height: 3.5rem;
  background-color: white;
  display: flex;
  border-bottom: 1px solid rgb(215, 215, 215);
  border-right: 1px solid rgb(215, 215, 215);
  opacity: 0.94;
  z-index: 100;
  
}

.header1__nav-container{
  flex: 1;
  min-width: 130px;
 
}

.header1__nav-button{
  width: 100%;
  height: 100%;
  border: none;
}

.header1__icon-container{
  width: 2.48rem;
  align-self: center;
}

.header1__settings-button{
  border: none;
  border-radius: 50%;
  margin-right: 0.42rem;
  width: 1.7rem;
  padding: 0.2rem 0.2rem;
 
}

.header1__nav-button:hover,.header1__settings-button:hover{
  background-color: rgb(215, 215, 215);
}






.middle-content{
  position: absolute;
  top:57px;
  left: 341px;
  display: grid;  
  background-color: white;
  border-right: 1px solid rgb(215, 215, 215);
}








.post-flex-container{
  display: flex;
  border-bottom: 1px solid rgb(215, 215, 215);
  

}

.top-item-container{
  display: flex;
  
}

.profile-container{
  max-width: 2.5rem;
  margin-right: 1.2rem;
}

.post-container{
  flex:1;
}

.profile-logo{
  margin-top: 0.5rem;
  margin-left: 0.5rem;
  min-width: 2rem;
  max-width: 100%;
  border-radius: 50%;
}

.post-input{
  border: none;
  outline: none;
  padding: 0.5rem;
  font-size: 1.2rem;
}



.post-audience-button{
  border: none;
  outline: none;
  color: rgb(29, 155, 240);
  white-space: nowrap;  
}

.audience-icon{
  max-width: 1rem;
  max-height: 1rem;
  
  fill: rgb(29, 155, 240);
 
}


.post-iconlist-item{
  
  border-top: 1px solid rgb(215, 215, 215);
 
  margin-top: 1rem;
  display: flex;
  align-items: center;


  
}


.icon-flex{
  display: flex;
  min-width: 26.5rem;
}

.icon-flex li{
  margin-left: 0.8rem;
}

.post-icon{
  width: 100%;
  height: 100%;
 vertical-align: bottom;
  fill: rgb(29, 155, 240);
}

.post-button{
margin: 0.5rem 0rem;
  max-width: 14.56rem;
  padding: 0.75rem 1.5rem;
  border-radius: 1.87rem;
  border: none;
  background-color: rgb(29, 155, 240);
  color: white;
}


.bottom-item-container{
 justify-self: stretch;

 padding: 0.7rem 0rem;
 color: rgb(29, 155, 240);
 border-bottom: 1px solid rgb(215, 215, 215);
 display: flex;
 justify-content: center;
}

.timeline{
  display: flex;
  margin-top: 1rem;
  margin-bottom: 1.5rem ;
}

.timeline:hover{
  background-color: rgb(247, 247, 247);
}

.timeline:hover button{
  background-color: rgb(247, 247, 247);
}

.info-container-grid{
  display: grid;
  grid-template-rows: minmax(auto, 2.5rem ) minmax(auto, 19.5rem ) minmax(auto, 1rem );
}

.top-info-container{
  display: flex;
  align-items: center;
  white-space: nowrap;
 
}

.profile-info-container{

}


.top-info-icon{
  max-width: 1rem;
  max-height: 1rem;
}

.middle-info-container p{

  margin-bottom: 0.8rem;
}

.middle_logo_container{
  max-width: 32rem;
  max-height: 16rem;
  margin-right: 1rem;
}

.middle_logo{
border-radius: 1rem;
 width: 100%;
 height: 100%;
}


.bottom__info-flex{
  margin-top: -0.3rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.bottom__container-blue:hover, .bottom__container-blue:hover span{
  fill: rgb(29, 155, 240);
  background-color: initial;
  color: rgb(29, 155, 240);
}



.bottom__container-green:hover, .bottom__container-green:hover span{
  fill: rgb(0, 186, 124);
  background-color: initial;
  color: rgb(0, 186, 124);;
}

.bottom__container-red:hover, .bottom__container-red:hover span{
  fill: rgb(249, 24, 128);
  background-color: initial;
  color: rgb(249, 24, 128);;
}

.bottom__info__flex img{
  max-width: 1.2rem;
  max-height: 1.2rem;
}



.bottom__right__column{
  margin-right: 1.2rem;
}


.bottom__button{
  border: none;
  border-style: none;
  max-width: 1.3rem;
  white-space: nowrap;
  border-radius: 1rem;
  
}

.bottom__button svg{
 width: 100%;
 height: 100%;
}

